# panopticonbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  scheduler.rs
src/db/: mod.rs  models.rs  redis.rs  sqlite.rs
